syntax = "proto3";

package internalapi;

import "google/protobuf/timestamp.proto";
import "base.proto";

option go_package = ".;internalapi";

service Proposal {
  rpc GetByID(ProposalByIDRequest) returns (ProposalByIDResponse);
  rpc GetByFilter(ProposalByFilterRequest) returns (ProposalByFilterResponse);
}

message ProposalByIDRequest {
  string proposal_id = 1;
}

message ProposalInfo {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string ipfs = 4;
  string author = 5;
  string dao_id = 6;
  uint64 created = 7;
  string network = 8;
  string symbol = 9;
  string type = 10;
  repeated Strategy strategies = 11;
  string title = 12;
  string body = 13;
  string discussion = 14;
  repeated string choices = 15;
  uint64 start = 16;
  uint64 end = 17;
  float quorum = 18;
  string privacy = 19;
  string snapshot = 20;
  string state = 21;
  string link = 22;
  string app = 23;
  repeated float scores = 24;
  string scores_state = 25;
  float scores_total = 26;
  uint64 scores_updated = 27;
  uint64 votes = 28;
}

message ProposalByIDResponse {
  ProposalInfo proposal = 1;
}

message ProposalByFilterRequest {
  optional string dao = 1;
  optional string category = 2;
  optional uint64 limit = 3;
  optional uint64 offset = 4;
}

message ProposalByFilterResponse {
  repeated ProposalInfo proposals = 1;
  uint64 total_count = 2;
}
